# exoplanet-research

./: .gitignore  CITATION.cff  README.md  RESEARCH_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
configs/experiments/: paper_v1.yml
configs/scoring/: ectp_v1.yml
data/: data_dictionary.csv  habitable_zone_calculated.csv  habitable_zone_candidates.csv  potentially_habitable_exoplanets.csv  top_habitable_candidates.csv
data/literature/: astrobiology_sources.yml
data/outputs/: astrobiology_rank_uncertainty.csv  astrobiology_ranked_candidates.provenance.json
data/processed/: canonical_exoplanets.provenance.json
docs/: development.md
docs/architecture/: artifact_policy.md  codebase_modularity_review.md  scientific_platform_architecture.md
docs/research/: astrobiology_literature_review.md  scientific_method_contract.md
docs/validation/: baseline_inventory.md  external_data_inventory.md  paper_readiness_audit.md  validation_report.md
frontend/: package-lock.json  package.json  tailwind.config.js
paper/: manuscript.md  references.bib  reproduce.sh
scripts/: convert_data_to_json.py
src/: 05_habitability_scoring.py
tests/: test_archive.py  test_baselines.py  test_experiment_config.py  test_experiment_runner_outputs.py  test_external_targets.py  test_habitable_zone.py  test_hz_models.py  test_literature_catalog.py  test_paper_figures.py  test_paper_tables.py  test_pipeline_outputs.py  test_pipeline_paper_export.py  test_pipeline_smoke.py  test_pipeline_uncertainty.py  test_scoring.py  test_scoring_config.py  test_uncertainty.py
(+62 files in other folders)
